--- a/src/pages/Dashboard/components/AddContact/style.scss
+++ b/src/pages/Dashboard/components/AddContact/style.scss
@@ -1,4 +1,4 @@
-@import "../../../../sass/style.scss";
+@import "../../../../sass/globals.scss";
 
 .section-add-contacts {
     display: flex;
@@ -21,8 +21,6 @@
     padding: 3px 7px;
 
     border-radius: 50%;
-
-    font-size: $button-1-desktop;
 }
 .div-add-contacts {
     display: flex;
@@ -30,6 +28,5 @@
     gap: 20px;
 }
 .add-contacts-subtitle {
-    font-size: $title-3-mobile;
-    font-weight: $semi-bold;
+    font-weight: $semi-bold-weight;
 }
