--- a/src/pages/Dashboard/components/ContactCard/style.scss
+++ b/src/pages/Dashboard/components/ContactCard/style.scss
@@ -1,4 +1,4 @@
-@import "../../../../sass/style.scss";
+@import "../../../../sass/globals.scss";
 
 .contact-card {
     padding: 18px 20px;
@@ -9,17 +9,13 @@
 
     background-color: $brand-3-color;
     color: $white-color;
-
-    border-radius: $radius-card;
 }
 .contact-info {
     display: flex;
     flex-direction: column;
     gap: 10px;
 
-    font-size: $text-3-mobile;
     @media (min-width: 769px) {
-        font-size: $text-3-desktop;
     }
 }
 .contact-icon-div {
@@ -32,12 +28,9 @@
         padding: 12px 15px;
 
         background-color: $background-color;
-        color: $black-color;
-        font-size: $title-card-mobile;
     }
     > h3 {
-        font-size: $title-card-mobile;
-        font-weight: $semi-bold;
+        font-weight: $semi-bold-weight;
         width: 100%;
     }
     @media (min-width: 769px) {
@@ -45,10 +38,8 @@
 
         > figure {
             padding: 20px 23px;
-            font-size: $title-card-desktop;
         }
         > h3 {
-            font-size: $title-card-desktop;
         }
     }
 }
@@ -57,7 +48,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    font-size: $card-button-mobile;
 
     > button {
         &:hover {
@@ -67,21 +57,18 @@
     }
 
     @media (min-width: 769px) {
-        font-size: $card-button-desktop;
     }
 }
 .edit-contact {
     background-color: $brand-3-color;
-    color: $edit-contact-color;
 }
 .delete-contact {
     background-color: $brand-3-color;
-    color: $delete-contact-color;
 }
 .confirm-delete-contact {
     border-radius: 5px;
     padding: 5px;
-    background-color: $delete-contact-color;
+
     color: $white-color;
 }
 .button-copy {
