--- a/src/pages/Dashboard/components/Header/style.scss
+++ b/src/pages/Dashboard/components/Header/style.scss
@@ -1,4 +1,4 @@
-@import "../../../../sass/style.scss";
+@import "../../../../sass/globals.scss";
 
 .dashboard-header {
     box-shadow: 0px 4px 40px -10px rgb(0 0 0 / 25%);
@@ -19,11 +19,9 @@
     gap: 20px;
 }
 .user-name {
-    font-weight: $semi-bold;
-    font-size: $username-size-mobile;
+    font-weight: $semi-bold-weight;
 
     @media (min-width: 769px) {
-        font-size: $username-size-desktop;
     }
 }
 
@@ -47,7 +45,6 @@
 }
 .delete-acc-btn {
     &:hover {
-        background-color: $error-color;
     }
 }
 .popup-menu {
@@ -64,6 +61,5 @@
     }
 }
 .red-delete {
-    background-color: $error-color;
     color: $white-color;
 }
