--- a/src/pages/Dashboard/style.scss
+++ b/src/pages/Dashboard/style.scss
@@ -1,7 +1,7 @@
-#root {
-    justify-content: flex-start;
-    padding-top: 70px;
-}
+// #root {
+//     justify-content: flex-start;
+//     padding-top: 70px;
+// }
 .contacts-list {
     width: 100%;
     display: flex;
