--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -12,9 +12,10 @@ $menu-color: rgba(0, 0, 0, 0.4);
 
 $grey-dark: #222222;
 $grey-medium: #909090;
-$grey-light: #d3d3d3;
+$grey-light: #d1d1d1;
 
 $white-color: #ffffff;
+$red-color: #ff3c3c;
 
 // Typography
 $button-size: 1.25rem;
