--- a/src/components/Header/Navbar/styles.module.scss
+++ b/src/components/Header/Navbar/styles.module.scss
@@ -2,6 +2,14 @@
 
 .loggedNavbar {
     @include navBasic();
+
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
+    @media (min-width: 769px) {
+        @include navBasic();
+    }
 }
 .notLoggedNavbar {
     @include navBasic();
