--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,33 +1,8 @@
 @use "/src/sass/globals.scss" as *;
 
-.header {
-    z-index: 6;
-    position: fixed;
-    top: 0;
-
-    width: 100%;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
-    > div {
-        display: none;
-    }
-
-    @media (min-width: 769px) {
-        background-color: $nav-color;
-        justify-content: center;
-
-        > div {
-            padding: 0 50px;
-
-            width: 100%;
-
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-        }
-    }
+.headerLogged {
+    @include headerBasic();
+}
+.headerNotLogged {
+    @include headerBasic();
 }
