feat: organized all the modals and forms, fixed update user problem and create public routes file

--- a/src/components/UserIcon/styles.module.scss
+++ b/src/components/UserIcon/styles.module.scss
@@ -1,9 +1,11 @@
 @import "../../sass/globals.scss";
-.figure-icon {
-    padding: 10px;
+.figureIcon {
+    padding: 12px 15px;
 
     border-radius: 50%;
 
     background-color: $brand-3-color;
     color: $white-color;
+
+    font-size: 25px;
 }
