--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -49,12 +49,9 @@
                 $text-color
             );
         }
-    }
-
-    .text {
-        // font-size: $heading-7-500;
-        font-weight: 500;
-        color: $text-color;
+        .close {
+            cursor: pointer;
+        }
     }
 
     .content {
@@ -63,11 +60,6 @@
         flex-direction: column;
         align-items: center;
         gap: 15px;
-    }
-    .textModalDelete {
-        margin: 20px 0;
-        // font-size: $heading-6-600;
-        font-weight: $semi-bold-weight;
     }
 }
 .deleteButtonsSection {
