--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -11,6 +11,7 @@ $placeholder-color: rgba(207, 214, 224, 0.5);
 $nav-color: rgba(217, 217, 217, 0.05);
 $menu-color: rgba(0, 0, 0, 0.4);
 $modal-bg-color: rgba(0, 0, 0, 0.6);
+$card-bg-color: rgba(76, 85, 58, 0.6);
 
 $grey-dark: #222222;
 $grey-medium: #909090;
@@ -37,6 +38,15 @@ $title-modal-size: 18px;
 
 $menu-options-logged-size: 1.5rem;
 
+$contact-name-mobile-size: 1.125rem;
+$contact-name-desktop-size: 1.375rem;
+
+$contact-card-button-mobile-size: 0.875rem;
+$contact-card-button-desktop-size: 1rem;
+
+$contact-infos-mobile-size: 1rem;
+$contact-infos-desktop-size: 1.125rem;
+
 // Weights
 $bold-weight: 700;
 $semi-bold-weight: 600;
@@ -47,3 +57,4 @@ $light-weight: 300;
 // Radius
 $radius-form: 5px;
 $radius-button: 5px;
+$radius-card: 3px;
