--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -2,6 +2,7 @@
 $brand-1-color: #5d6945;
 $brand-2-color: #4c553a;
 $brand-3-color: #94a07c;
+// $brand-3-color: #23291b;
 
 $background-color: rgba(30, 30, 30, 0.4);
 $background-dashboard: #1e1e1e;
