--- a/src/sass/abstract/_mixins.scss
+++ b/src/sass/abstract/_mixins.scss
@@ -191,3 +191,12 @@
     background-color: transparent;
     cursor: pointer;
 }
+@mixin logoBasic() {
+    width: 40px;
+    height: 40px;
+
+    @media (min-width: 769px) {
+        width: 50px;
+        height: 50px;
+    }
+}
